@@ -8,5 +8,6 @@
 #undef PACKAGE_DATA_DIR
 #undef PACKAGE_SOURCE_DIR
 #undef ENABLE_BONOBO
+#undef USING_OAF
 #undef ENABLE_FRGBA
 #undef ENABLE_RBUF
