@@ -1,0 +1,59 @@
+<oaf_info>
+
+<oaf_server iid="OAFIID:embeddable-factory:sodipodi-svg-doc:4fda0c32-8996-4196-ac88-a79b5888e269"
+            type="exe"
+            location="sodipodi-bonobo">
+
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:Bonobo/EmbeddableFactory:1.0"/>
+		<item value="IDL:Bonobo/GenericFactory:1.0"/>
+	</oaf_attribute>
+
+	<oaf_attribute name="description" type="string"
+	               value="Sodipodi SVG Document factory"/>
+
+</oaf_server>
+
+<oaf_server iid="OAFIID:embeddable:sodipodi-svg-doc:22b6e202-cb42-46d2-a5ad-817aceeb559b"
+            type="factory"
+            location="OAFIID:embeddable-factory:sodipodi-svg-doc:4fda0c32-8996-4196-ac88-a79b5888e269">
+
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:BonoboObject/sodipodi-svg-doc:1.0"/>
+		<item value="IDL:Bonobo/Embeddable:1.0"/>
+	</oaf_attribute>
+
+	<oaf_attribute name="description" type="string"
+	               value="Sodipodi SVG Document"/>
+
+</oaf_server>
+
+<oaf_server iid="OAFIID:embeddable-factory:canvas-item:sodipodi-svg-doc:60761039-5a0e-4da0-848e-86d406399b8c"
+            type="exe"
+            location="sodipodi-bonobo">
+
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:Bonobo/EmbeddableFactory:1.0"/>
+		<item value="IDL:Bonobo/GenericFactory:1.0"/>
+	</oaf_attribute>
+
+	<oaf_attribute name="description" type="string"
+	               value="Sodipodi SVG Document factory"/>
+
+</oaf_server>
+
+<oaf_server iid="OAFIID:embeddable:canvas-item:sodipodi-svg-doc:07b4c9f9-ac21-407c-9b9d-dcf28572b58b"
+            type="factory"
+            location="OAFIID:embeddable-factory:sodipodi-svg-doc:4fda0c32-8996-4196-ac88-a79b5888e269">
+
+	<oaf_attribute name="repo_ids" type="stringv">
+		<item value="IDL:BonoboObject/sodipodi-svg-doc:1.0"/>
+		<item value="IDL:Bonobo/Canvas/Item:1.0"/>
+	</oaf_attribute>
+
+	<oaf_attribute name="description" type="string"
+	               value="Sodipodi SVG Document"/>
+
+</oaf_server>
+
+</oaf_info>
